unpackaged/main/default/objects/Brand_Bot_Announcement__c/Brand_Bot_Announcement__c.object-meta.xml
<CustomObject>
    <label>Brand Bot Announcement</label>
    <nameField>
        <label>Brand Bot Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Bot Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>