unpackaged/main/default/objects/Brand_Bot_Announcement__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <description>Text to display to the end-user</description>
    <label>Announcement</label>
    <type>TextArea</type>
</CustomField>