unpackaged/main/default/objects/Brand_Bot_Announcement__c/fields/Announcement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Announcement_End_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The LAST day the announcement will display on.</description>
    <label>Announcement End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>