unpackaged/main/default/objects/Brand_Bot_Announcement__c/fields/Announcement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date the announcement will begin to display</description>
    <label>Announcement Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>