unpackaged/main/default/objects/Brand_Bot_Announcement__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tommy Hilfiger</fullName>
            </value>
            <value>
                <fullName>Calvin Klein</fullName>
            </value>
            <value>
                <fullName>IZOD</fullName>
            </value>
            <value>
                <fullName>Speedo</fullName>
            </value>
            <value>
                <fullName>Van Heusen</fullName>
            </value>
            <value>
                <fullName>DEFAULT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>