unpackaged/main/default/objects/Brand_Bot_Announcement__c/validationRules/End_Date_Must_Be_On_Or_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Be_On_Or_After_Start_Date</fullName>
    <active>true</active>
    <description>Announcement End Date must be the same day, or after, the Announcement Start Date</description>
    <errorConditionFormula>Announcement_End_Date__c &lt; Announcement_Start_Date__c</errorConditionFormula>
    <errorMessage>Announcement End Date must be the same day, or after, the Announcement Start Date</errorMessage>
</ValidationRule>