unpackaged/main/default/objects/Brand_Bot_Announcement__c/validationRules/Start_And_End_Dates_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_And_End_Dates_Cannot_Be_Past</fullName>
    <active>true</active>
    <description>Start and end dates for new announcements must be either today or a date in the future, to avoid confusion.</description>
    <errorConditionFormula>Announcement_End_Date__c  &lt;  TODAY() || Announcement_Start_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorMessage>Both your announcement start date and end date must be either today, or sometime in the future.</errorMessage>
</ValidationRule>